# stPDF

./: .editorconfig  .eslintrc.cjs  .prettierignore  .prettierrc  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  run.sh  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.tsx  vite-env.d.ts
src-tauri/: .editorconfig  Cargo.toml  run.sh  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: run
src-tauri/src/: excel_document.rs  main.rs  state.rs  utils.rs
src-tauri/src/analyzed_document/: metadata.rs  mod.rs
src-tauri/src/analyzed_documents/: bja_document.rs  child_document.rs  mod.rs  parent_document.rs  unrecognized_document.rs
src-tauri/src/barcode_handler/: mod.rs
src-tauri/src/errors/: scanner_error.rs
src-tauri/src/identifier_handler/: mod.rs
src-tauri/src/img/: mod.rs
src-tauri/src/pdf/: mod.rs
src-tauri/src/pdf_document/: bja_document.rs  child_document.rs  document.rs  mod.rs  parent_document.rs
src-tauri/src/pdf_handler/: mod.rs  pdf_page.rs
src-tauri/src/registries/: mod.rs  options_registry.rs
src-tauri/src/scanned_document/: mod.rs
src-tauri/src/scanned_document/child/: mod.rs
src-tauri/src/scanned_document/parent/: mod.rs
src-tauri/src/scanner/: barcode_128.rs  mod.rs
src-tauri/src/scanner/errors/: mod.rs  scanner_error.rs
src-tauri/src/scanner_old/: mod.rs  ui.rs
src/assets/styles/: styles.css
src/components/: DetailsBar.tsx  ScanDirectoryForm.tsx  ScanImagesForm.tsx
src/components/analyzed-documents-viewer/: AnalyzedDocumentsSection.tsx  Carousel.tsx  CarouselNavigationBtns.tsx  DetailsBar.tsx  DocumentsButtons.tsx  NoAnalyzedDocumentsSection.tsx  SourcesGalleryBar.tsx  StatusBar.tsx
src/components/analyzed-documents-viewer/styles/: index.css
src/components/buttons/: UploadButton.tsx
src/components/document-viewer/: BjaViewer.tsx  DocumentViewer.tsx  ImageView.tsx  ParentViewer.tsx  UnrecognizedViewer.tsx
src/components/modals/: ProgressModal.tsx
src/components/scan-sources/: DocumentAnalysisOptions.tsx  DocumentsAnalysis.tsx  DocumentsAnalysisSection.tsx  ScanSourcesForm.tsx  ScanSourcesOptions.tsx
src/components/scan-sources/forms/: Input.tsx  Select.tsx  Title.tsx  UploadButton.tsx
src/components/scan-sources/types/: index.ts
src/contexts/analyzed-documents/: index.tsx
src/contexts/analyzed-documents/types/: index.ts
src/contexts/documents/: documentsContext.tsx
src/contexts/documents/types/: index.ts
src/contexts/sources/: index.tsx
src/contexts/sources/types/: index.ts
src/services/: dialogService.ts
src/stores/: documents.tsx
src/stores/analyzed-documents/: index.tsx
src/stores/analyzed-documents/types/: index.ts
src/utils/: plurify.ts  type-guard.ts
src/views/: ScanImagesView.tsx  ScanSourcesView.tsx
