[package]
name = "stpdf"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.24.3", default-features = false, features = ["png", "jpeg"] }
rxing = { version = "0.4.12", default-features = false, features = ["image", "serde"] }
tauri-plugin-dialog = "2.0.0-beta.3"
printpdf = { version = "0.7.0", default-features = false, features = ["embedded_images"] }
tauri-plugin-fs = "2.0.0-beta.4"
thiserror = "1.0.58"
pdf-writer = "0.9.2"
miniz_oxide = "0.7.2"
