[package]
name = "stpdf"
version = "0.9.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
image = { version = "=0.24.3", default-features = false, features = ["png", "jpeg"] }
rxing = { version = "=0.5.8", default-features = false, features = ["image", "serde"] }
tauri-plugin-dialog = "2.0.0-beta.3"
printpdf = { version = "0.7.0", default-features = false, features = ["embedded_images"] }
tauri-plugin-fs = "2.0.0-beta.4"
thiserror = "1.0.58"
rayon = "1.10.0"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
